--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,14 @@
       "**/.project": true,
       "**/.settings": true,
       "**/.factorypath": true
-   }
+   },
+   "java.configuration.runtimes": [
+      
+      
+      {
+         "name": "JavaSE-1.8",
+         "path": "/home/gitpod/.sdkman/candidates/java/11.0.15.fx-zulu",
+         "default": true
+       }
+   ]
 }
